Fix credits flickering
Fixes #168

--- a/src/app/scss/main.scss
+++ b/src/app/scss/main.scss
@@ -79,6 +79,7 @@ footer {
 	position: fixed;
 	bottom: 0px;
 	left: 15px;
+	z-index: 100;
 
 	> a > span {
 		display: block;
